@@ -1,7 +1,7 @@
 Package: rbugs
 Title: Fusing R and OpenBugs
 Date: 2010-06-09
-Version: 0.4-2
+Version: 0.4-3
 Author: Jun Yan <jyan@stat.uconn.edu> and Marcos Prates
         <marcos.prates@uconn.edu>
 Description: Functions to prepare files needed for running BUGS in
@@ -11,5 +11,5 @@ Suggests: coda (>= 0.13-5)
 Maintainer: Marcos Prates <marcos.prates@uconn.edu>
 License: GPL (>= 3.0)
 Repository: CRAN
-Date/Publication: 2010-06-11 09:05:03
-Packaged: 2010-06-10 03:43:43 UTC; marcosop
+Date/Publication: 2010-06-18 08:36:12
+Packaged: 2010-06-17 16:54:43 UTC; marcosop
